--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.4.1"
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2"
   }
 }
